[project]
name = "DDAG_Project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Your Denvey", email = "302283510@student.rocmondriaan.nl"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
